fixed editor scroll when too much text

--- a/Client/src/styles/base/_base.scss
+++ b/Client/src/styles/base/_base.scss
@@ -599,7 +599,8 @@ input {
     font-family: open-sans, arial, sans-serif;
 }
 .DraftEditor-root{
-    min-height: 200px;
+    height: 200px;
+    overflow-y: auto;
 }
 
 .popup-content{
